# SafeRun-AI

./: .env.example  .gitignore  Dockerfile  README.md  codebase.txt  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  setup.py
.github/workflows/: main.yml
backend/: audit.py  config.py  database.py  explanations.py  init.py  main.py  models.py  policy_engine.py  sandbox.py  scanner.py  schemas.py  utils.py
backend/policies/: default_policy.yaml
cli/: main.py
examples/: dangerous_examples.py  network_example.py  safe_examples.py  timeout_example.py
frontend/: __init__.py  app.py
frontend/static/: index.html
sandbox_image/: Dockerfile  Dockerimage  script.py
tests/: test_config.py  test_policy_engine.py  test_scanner.py  test_schemas.py
