[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saferun-ai"
version = "1.0.0"
description = "Secure sandbox execution for AI-generated Python code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Manish Tiwari", email = "manish.tiwari.09@zohomail.in"}
]
keywords = ["security", "sandbox", "docker", "code-execution", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "docker>=7.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
saferun = "cli.main:cli"

[project.urls]
Homepage = "https://github.com/predictivemanish/saferun-ai"
Documentation = "https://github.com/predictivemanish/saferun-ai#readme"
Issues = "https://github.com/predictivemanish/saferun-ai/issues"

[tool.setuptools.packages.find]
include = ["backend*", "frontend*", "cli*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.txt", "*.md"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]